<resources>
    <string name="app_name">Cotação de Moedas</string>
    <string name="dolar">Dólar</string>
    <string name="euro">Euro</string>
    <string name="visualizar_tudo">Visualizar tudo</string>
    <string name="dolar_comercial">Dólar Comercial</string>
    <string name="home">Home</string>
    <string name="copiar_para_area_de_transferencia">Copiar para a área de transferência</string>
    <string name="converter">Converter</string>
    <string name="dolarcomercial">Dólar\nComercial</string>
    <string name="pct">pct</string>
    <string name="dolarturismo">Dólar\nTurismo</string>
    <string name="bitcoin">BitCoin</string>
    <string name="text_hint">*Clique em um campo para exibir os detalhes</string>

</resources>