<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:padding="20dp"
    tools:context=".activitys.MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/money_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.25">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/border"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_teste"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:labelFor="@id/et_dolar"
                android:text="Dólar\nComercial"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_dolar"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:autofillHints="Valor Dólar"
                android:background="@drawable/border"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColor="#368BA5"
                android:textSize="20sp"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/icon_irDolar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/visualizar_tudo"
                android:onClick="irDolar"
                android:src="@drawable/ic_arrow" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:labelFor="@id/et_dolar"
                android:text="Dólar\nTurismo"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_dolarTurismo"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:autofillHints="Valor Dólar"
                android:background="@drawable/border"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColor="#368BA5"
                android:textSize="20sp"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/icon_irDolarTurismo"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/visualizar_tudo"
                android:onClick="irDolarTurismo"
                android:src="@drawable/ic_arrow" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:labelFor="@+id/et_euro"
                android:text="@string/euro"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_euro"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:autofillHints="Valor Euro"
                android:background="@drawable/border"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:enabled="false"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColor="#368BA5"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/icon_irEuro"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/visualizar_tudo"
                android:onClick="irEuro"
                android:src="@drawable/ic_arrow" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:labelFor="@+id/et_euro"
                android:text="BitCoin"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_btc"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:autofillHints="Valor Euro"
                android:background="@drawable/border"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:enabled="false"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColor="#368BA5"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/icon_irBtc"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/visualizar_tudo"
                android:onClick="irBtc"
                android:src="@drawable/ic_arrow" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">


            <TextView
                android:id="@+id/tv_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/et_euro"
                android:text="Data"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#368BA5"
        android:contentDescription="@string/home"
        android:onClick="HOME"
        android:src="@drawable/ic_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:maxImageSize="35dp" />

</androidx.constraintlayout.widget.ConstraintLayout>